# autoresearch

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  prepare.py  program.md  pyproject.toml  run_docker.sh  slurm-11165269.out  slurm-11326758.out  slurm-11436223.out  train.py
