[project]
name = "autoresearch"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "ollama",
    "requests",
    "pyarrow",
    "tiktoken",
    "torch",
    "rustbpe",
    "kernels",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true